sandbox/output
Reorder.java:19: error: ')' expected
            result.add(Arrays.asList(2,1,2);
                                           ^
Reorder.java:20: error: ')' expected
            result.add(Arrays.asList(2,2,2);
                                           ^
2 errors
